@@ -1,0 +1,1 @@
+DIST samri-0.4.2.tar.gz 4115783 SHA256 bf2d14a57e153d1dbfdb6471434412a1ab00c92dd8cd4a858fa9c9b7703dfae6 SHA512 cb5853ea0d47a3cfd61a0064a1ab776f34dc5178fbe53d515452c03b5b3b24e39d1fe22f6f75e3918c86aaac7517aac05bc911ea8ffdb5a4c3ef07b5cff63880 WHIRLPOOL dd9f42ec3b5d3280968560f5d81bb8db252f9256ad42f888af1b8ceaed57946febe69d3e6dc11824a9713fa5ae51d62f38e7ee1b333d6f2c7279c76af9b18e32
